compiler/testData/diagnostics/tests/inline/kt4869.fir.kt
inline fun foo(f: () -> Unit) {
    konst ff = { f: () -> Unit ->
        f.invoke()
    }
    ff(<!USAGE_IS_NOT_INLINABLE!>f<!>)
}
